@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10332 2005/06/08 16:21:37 bouyer Exp $
+$NetBSD: CHANGES,v 1.10333 2005/06/08 22:46:26 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 	
@@ -2844,3 +2844,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Removed security/pam-smbpass [salo 2005-06-08]
 	Removed security/winbind [salo 2005-06-08]
 	Updated net/p5-SNMP-Info to 0.9nb1 [bouyer 2005-06-08]
+	Updated misc/udfclient to 0.4 [reinoud 2005-06-09]
